# gpu-ascii

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.html  DEVELOPER_GUIDE.md  GPU_Shader_ASCII方案.txt  LICENSE  README.md  README_zh.md  pyproject.toml
python/: __init__.py  debug_frames.py  example.py  example_game.py  gpu_ascii.py  output.txt  rawkb.py
python/examples/: debug_frames.py  example.py  example_engine.py  example_game.py  test_engine.py
python/games/: README.md
python/games/platformer/: game.py
shaders/: ascii.wgsl  ascii_color.wgsl
src/: ffi.rs  lib.rs  main.rs
src/ascii/: converter.rs  game_renderer.rs  mod.rs  renderer.rs
src/cli/: args.rs
src/gpu/: context.rs  mod.rs  shader.rs
