[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gpu-ascii"
version = "0.1.0"
description = "GPU-accelerated image to ASCII art converter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ascii", "gpu", "image", "art"]

[project.urls]
Homepage = "https://github.com/yourusername/gpu-ascii"
Repository = "https://github.com/yourusername/gpu-ascii"

[tool.setuptools]
py-modules = ["gpu_ascii"]

[tool.setuptools.package-dir]
"" = "python"
